--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -7,6 +7,11 @@
     ~/bin/shell:
       path: bin/shell
       create: true
+      relink: true
+
+    ~/.vimrc:
+      path: profile/.vimrc
+      relink: true
 
 - shell:
     # Extend .bashrc file
@@ -19,3 +24,4 @@
 
 - apt:
   - bash-completion
+  - vim
