chore: Add common APT packages

--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -24,4 +24,15 @@
 
 - apt:
   - bash-completion
+  - curl
+  - di
+  - htop
+  - jq
+  - lsof
+  - net-tools
+  - netcat-openbsd
+  - rclone
+  - rsync
+  - tcpdump
   - vim
+  - yq
