--- a/.github/workflows/sync-upstream.yaml
+++ b/.github/workflows/sync-upstream.yaml
@@ -1,3 +1,4 @@
+# NOTE: This workflow is not intended to run on the main repository; recommended to disable it manually.
 name: Sync with Upstream
 
 on:
