--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -17,6 +17,15 @@ repos:
     hooks:
       - id: shellcheck
 
+  - repo: local
+    hooks:
+      - id: test
+        name: Run tests
+        language: system
+        pass_filenames: false
+        entry: make
+        args: [test]
+
 ci:
   autofix_prs: true
   autoupdate_schedule: quarterly
