--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+logs/
+
 # Created by https://www.toptal.com/developers/gitignore/api/osx,linux,windows,visualstudiocode
 # Edit at https://www.toptal.com/developers/gitignore?templates=osx,linux,windows,visualstudiocode
 
