--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -10,6 +10,7 @@ on:
 
 jobs:
   lint:
+    name: Lint
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
@@ -21,6 +22,7 @@ jobs:
         if: always()
 
   test:
+    name: Test
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
@@ -32,14 +34,17 @@ jobs:
           ./test/bats/bin/bats --verbose-run --recursive ./test/unit
 
   test-linux:
+    name: Test (Linux; {{ matrix.platform }}, ${{ matrix.image }})
     strategy:
       matrix:
         platform:
           - ubuntu-latest
           - ubuntu-24.04-arm # TODO: ubuntu-latest-arm is not available yet
         image:
-          - mcr.microsoft.com/devcontainers/base:1-ubuntu-22.04
-          # TODO: Add more base images to test against
+          - mcr.microsoft.com/devcontainers/base:2-ubuntu
+          - mcr.microsoft.com/devcontainers/base:1-debian
+          # TODO: Add more base images to test against (e.g. Fedora)
+
     runs-on: ${{ matrix.platform }}
     steps:
       - uses: actions/checkout@v4
