--- a/.github/workflows/sync-upstream.yaml
+++ b/.github/workflows/sync-upstream.yaml
@@ -1,4 +1,4 @@
-# NOTE: This workflow is not intended to run on the main repository; recommended to disable it manually.
+# * This workflow is run only if `SYNC_UPSTREAM` variable is set in the repository variables.
 name: Sync with Upstream
 
 on:
@@ -6,18 +6,15 @@ on:
   schedule:
     - cron: "0 0 * * *"
 
-permissions: read-all
-
 jobs:
-  merge-upstream:
+  sync:
+    name: Sync
     runs-on: ubuntu-latest
-    # Run only if the current repository is fork or clone
-    if: ${{ github.repository != 'lasuillard/dotfiles' }}
+    if: ${{ vars.SYNC_UPSTREAM != '' }}
     permissions:
       contents: write
     steps:
-      - name: Checkout
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v4
         with:
           fetch-depth: 0
 
