Add TODO to .gitignore
Signed-off-by: Yuchan Lee <lasuillard@gmail.com>

--- a/profile/.gitignore
+++ b/profile/.gitignore
@@ -1,3 +1,5 @@
+TODO
+
 # Created by https://www.toptal.com/developers/gitignore/api/visualstudiocode,linux,macos,windows,powershell,database
 # Edit at https://www.toptal.com/developers/gitignore?templates=visualstudiocode,linux,macos,windows,powershell,database
 
